ignore feat branch for deployment

--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,7 @@
         "deploymentEnabled": {
             "main": true,
             "develop": true,
+            "feat/*": false,
             "*": false
         }
     }
