add axios for dependency

--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "format": "biome format --write",
     "db:generate": "prisma generate",
     "db:push": "prisma db push",
-    "db:seed": "tsx prisma/seed.ts",
-    "db:reset": "prisma db push --force-reset && tsx prisma/seed.ts",
+    "db:reset": "prisma db push --force-reset",
     "db:studio": "prisma studio"
   },
   "dependencies": {
