feat: improve post fetching logic and update data structure for consistency

--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,8 @@
       "main": true,
       "develop": true,
       "feat/*": false,
+      "fix/*": false,
+      "hotfix/*": false,
       "*": false
     }
   }
